--- a/node-express-jwt-auth-lesson-3/views/login.ejs
+++ b/node-express-jwt-auth-lesson-3/views/login.ejs
@@ -1,29 +1,63 @@
 <%- include('partials/header'); -%>
 
-    <form>
-        <h2>Log In</h2>
+    <form action="/signup">
+        <h2>Log in</h2>
         <label for="email">Email</label>
         <input type="text" name="email" required/>
         <div class="email error"></div>
         <label for="password">Password</label>
         <input type="password" name="password" required/>
         <div class="password error"></div>
-        <button>Sign Up</button>
+        <button>Log in</button>
     </form>
 
     <script>
         const form = document.querySelector('form');
+        const emailError = document.querySelector('.email.error');
+        const passwordError = document.querySelector('.password.error');
 
-        form.addEventListener("submit", (e) => {
+        form.addEventListener("submit", async(e) => {
             e.preventDefault();
+
+            //reset errors
+            emailError.textContent = "";
+            passwordError.textContent = "";
+
 
             //get values
             const email = form.email.value;
             const password = form.password.value;
 
+            try {
+
+                const res = await fetch('/login', {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        email,
+                        password
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+
+                });
+                const data = await res.json();
+                console.log(data);
+                if (data.result) {
+                    emailError.textContent = data.result.email;
+                    passwordError.textContent = data.result.password;
+                }
+                if (data.result.user) {
+                    location.assign('/');
+                }
+
+            } catch (err) {
+                console.log(err);
+            }
+
 
         });
     </script>
-    <h1>Login</h1>
+
 
     <%- include('partials/footer'); -%>
